@@ -37,6 +37,7 @@ https://github.com/elastic/beats/compare/v5.6.4...5.6[Check the HEAD diff]
 *Metricbeat*
 
 - Clarify meaning of percentages reported by system core metricset. {pull}5565[5565]
+- Fix map overwrite in docker diskio module. {issue}5582[5582]
 
 *Packetbeat*
 
